--- a/shooter-app/src/styles.scss
+++ b/shooter-app/src/styles.scss
@@ -7,7 +7,9 @@
 
 body {
   padding: 0;
-  margin: 0;
-  font-family: Roboto, sans-serif;
+  margin: 0%;
+  //font-family: Roboto, sans-serif;
+    font-family: "Comic Sans MS", sans-serif;
+
 
 }
