comparing FlexLayoutModule vs MatGridListModule

--- a/shooter-app/src/app/single-player/single-player.component.html
+++ b/shooter-app/src/app/single-player/single-player.component.html
@@ -1,9 +1,8 @@
-<!--<p>-->
-  <!--single-player works!-->
-<!--</p>-->
 
-<div style="display: flex; justify-content: center; border: 1px solid black">
-<div fxFlex="50">
+
+
+
+  <div fxFlexOffset.gt-sm="10" fxFlex.xs="50" fxFlex.gt-sm="30">
     <mat-card >
       <mat-card-header>
         <mat-card-title>
@@ -22,7 +21,7 @@
     </mat-card>
   </div>
 
-  <div fxFlex="50">
+  <div fxFlexOffset.gt-sm="20" fxFlex.xs="50" fxFlex.gt-sm="30">
 
     <mat-card >
       <mat-card-header>
@@ -41,6 +40,12 @@
       </mat-card-actions>
     </mat-card>
 
-</div>
-
   </div>
+
+
+
+
+
+
+
+
