--- a/shooter-app/src/app/multi-player/multi-player.component.html
+++ b/shooter-app/src/app/multi-player/multi-player.component.html
@@ -1,3 +1,38 @@
-<p>
-  multi-player works!
-</p>
+<mat-grid-list cols="2">
+  <mat-grid-tile>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
+          <h3></h3>
+        </mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src='' alt=''>
+      <mat-card-content>
+        <p>test
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-card >
+      <mat-card-header>
+        <mat-card-title>
+          <h3></h3>
+        </mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src='' alt=''>
+      <mat-card-content>
+        <p>test
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
