playing around with flex modules

--- a/shooter-app/src/app/single-player/single-player.component.html
+++ b/shooter-app/src/app/single-player/single-player.component.html
@@ -2,7 +2,7 @@
 
 
 
-  <div fxFlexOffset.gt-sm="10" fxFlex.xs="50" fxFlex.gt-sm="30">
+  <div fxFlex.xs="50"  fxFlex.gt-xs="30" fxFlexOffset.gt-xs="10">
     <mat-card >
       <mat-card-header>
         <mat-card-title>
@@ -21,7 +21,7 @@
     </mat-card>
   </div>
 
-  <div fxFlexOffset.gt-sm="20" fxFlex.xs="50" fxFlex.gt-sm="30">
+  <div fxFlex.xs="50"  fxFlexOffset.gt-xs="20" fxFlex.gt-xs="30">
 
     <mat-card >
       <mat-card-header>
