first build test

--- a/shooter-app/src/app/nav/nav.component.scss
+++ b/shooter-app/src/app/nav/nav.component.scss
@@ -7,7 +7,7 @@ div {
 }
 
 .mat-sidenav-container{
-  min-height: 93vh !important;
+  min-height: 93vh
 }
 
 
@@ -26,3 +26,8 @@ div {
 }
 
 
+.player-button {
+  padding: 10px 25%;
+  margin-top: 20px;
+
+}
