--- a/shooter-app/src/app/multi-player/multi-player.component.html
+++ b/shooter-app/src/app/multi-player/multi-player.component.html
@@ -1,38 +1,34 @@
 <mat-grid-list cols="2">
   <mat-grid-tile>
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3></h3>
-        </mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src='' alt=''>
-      <mat-card-content>
-        <p>test
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
+
+      <mat-card style="width: 100%; height: 100%; padding: 0px; margin: 0px">
+        <button mat-button style="width: 100%; height: 100%; margin: 0px ">
+
+        <mat-card-content style="width: 100%; height: 100% ">
+
+
+
+
+        </mat-card-content>
+
+        </button>
+      </mat-card>
+
   </mat-grid-tile>
   <mat-grid-tile>
-    <mat-card >
-      <mat-card-header>
-        <mat-card-title>
-          <h3></h3>
-        </mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src='' alt=''>
-      <mat-card-content>
-        <p>test
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
+
+      <mat-card style="width: 100%; height: 100%; padding: 0px; margin: 0px">
+        <button mat-button color="primary" style="width: 100%; height: 100%; margin: 0px ">
+
+        <mat-card-content style="width: 100%; height: 100% ">
+
+
+
+
+        </mat-card-content>
+
+        </button>
+      </mat-card>
+
   </mat-grid-tile>
 </mat-grid-list>
