--- a/shooter-app/src/app/nav/nav.component.html
+++ b/shooter-app/src/app/nav/nav.component.html
@@ -13,7 +13,6 @@
 
     <span class="example-spacer"></span>
     <div fxShow="true" fxHide.lt-md="true">
-      <a mat-button routerLink="/multi-player">Demo</a>
       <a mat-button routerLink="/about">About</a>
       <a mat-button routerLink="/contact">Contact</a>
     </div>
@@ -26,7 +25,6 @@
 
     <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
       <div fxLayout="column">
-        <a mat-button routerLink="/multi-player">Demo</a>
         <a mat-button routerLink="/about">About</a>
         <a mat-button routerLink="/contact">Contact</a>
       </div>
@@ -38,17 +36,61 @@
 
       <!--MAIN CONTENT OF THE APPLICATION-->
       <div style="display: flex; flex-direction: column; justify-content: space-between; height: 93vh">
-        <div style="border: 1px solid black">
-          <section>
-            <a mat-button routerLink="/single-player">Single-Player</a>
-            <a mat-button routerLink="/multi-player">Multi-Player</a>
-          </section>
-        </div>
-        <div style="border: 1px solid red">
+        <!--<div style=" ">-->
+          <div style="">
+
+
+
+
+<!--<mat-grid-list cols="2" style="border: 1px solid yellowgreen">-->
+  <!--<mat-grid-tile >-->
+    <!--<button mat-stroked-button color="accent" routerLink="/single-player" class="border-button" style="">Single-Player</button>-->
+  <!--</mat-grid-tile>-->
+  <!--<mat-grid-tile>-->
+    <!--<button mat-stroked-button color="accent" routerLink="/multi-player" style="  ">Multi-Player</button>-->
+  <!--</mat-grid-tile>-->
+<!--</mat-grid-list>-->
+
+<div fxFlex="50" style="">
+<button mat-raised-button color="primary" routerLink="/single-player" class="player-button">Single-Player</button>
+</div>
+<div fxFlex="50">
+<button mat-raised-button color="primary" routerLink="/multi-player" class="player-button">Multi-Player</button>
+</div>
+
+
+          </div>
+        <!--</div>-->
+        <div >
           <router-outlet></router-outlet>
         </div>
-        <div style="border: 1px solid blue">
-          <footer>Copyright: 2020</footer>
+        <div >
+          <!--<mat-card color="primary" style="width: 100%; height: 100%; padding: 0px; margin: 0px">-->
+            <!--&lt;!&ndash;<button mat-button style="width: 100%; height: 100%; margin: 0px; padding: 0px">&ndash;&gt;-->
+
+            <!--<mat-card-content style="width: 100%; height: 100%;">-->
+
+
+                <mat-toolbar color="primary" style="width: 100%; height: 100%; ">
+
+                  <div style="display: flex; width: 100%; justify-content: center">
+
+
+                <a mat-button routerLink="/about">About</a>
+                  <a mat-button routerLink="/home">© Copyright 2021</a>
+        <a mat-button routerLink="/contact">Contact</a>
+
+
+</div>
+                </mat-toolbar>
+
+
+
+            <!--</mat-card-content>-->
+
+            <!--&lt;!&ndash;</button>&ndash;&gt;-->
+          <!--</mat-card>-->
+
         </div>
       </div>
 
