--- a/shooter-app/src/app/single-player/single-player.component.html
+++ b/shooter-app/src/app/single-player/single-player.component.html
@@ -1,51 +1,34 @@
+<mat-grid-list cols="2">
+  <mat-grid-tile>
+
+      <mat-card style="width: 100%; height: 100%; padding: 0px; margin: 0px">
+        <button mat-button style="width: 100%; height: 100%; margin: 0px ">
+
+        <mat-card-content style="width: 100%; height: 100% ">
 
 
 
 
-  <div fxFlex.xs="50"  fxFlex.gt-xs="30" fxFlexOffset.gt-xs="10">
-    <mat-card >
-      <mat-card-header>
-        <mat-card-title>
-          <h3></h3>
-        </mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src='' alt=''>
-      <mat-card-content>
-        <p>test
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
+        </mat-card-content>
 
-  <div fxFlex.xs="50"  fxFlexOffset.gt-xs="20" fxFlex.gt-xs="30">
+        </button>
+      </mat-card>
 
-    <mat-card >
-      <mat-card-header>
-        <mat-card-title>
-          <h3></h3>
-        </mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src='' alt=''>
-      <mat-card-content>
-        <p>test
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
 
-  </div>
+      <mat-card style="width: 100%; height: 100%; padding: 0px; margin: 0px">
+        <button mat-button style="width: 100%; height: 100%; margin: 0px ">
+
+        <mat-card-content style="width: 100%; height: 100% ">
 
 
 
 
+        </mat-card-content>
 
+        </button>
+      </mat-card>
 
-
-
+  </mat-grid-tile>
+</mat-grid-list>
