--- a/shooter-app/src/app/contact/contact.component.html
+++ b/shooter-app/src/app/contact/contact.component.html
@@ -1,3 +1,44 @@
-<p>
-  contact works!
-</p>
+<mat-grid-list cols="1"  fxHide.gt-xs="true">
+  <mat-grid-tile>
+
+      <mat-card style="width: 100%; height: 100%;  ">
+        <!--<button mat-button style="width: 100%; height: 100%; margin: 0px ">-->
+
+        <mat-card-content style="width: 100%; height: 100% ">
+
+          <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%">
+            <div>Contact</div>
+          </div>
+
+
+        </mat-card-content>
+
+        <!--</button>-->
+      </mat-card>
+
+  </mat-grid-tile>
+
+</mat-grid-list>
+
+
+<mat-grid-list cols="1" rowHeight="25rem" fxHide.xs="true">
+  <mat-grid-tile>
+
+      <mat-card style="width: 100%; height: 100%;  ">
+        <!--<button mat-button style="width: 100%; height: 100%; margin: 0px ">-->
+
+        <mat-card-content style="width: 100%; height: 100% ">
+
+          <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%">
+            <div>Contact</div>
+          </div>
+
+
+        </mat-card-content>
+
+        <!--</button>-->
+      </mat-card>
+
+  </mat-grid-tile>
+
+</mat-grid-list>
