--- a/shooter-app/src/app/home/home.component.html
+++ b/shooter-app/src/app/home/home.component.html
@@ -1,8 +1,44 @@
-<p>
-  home works!
-</p>
+<mat-grid-list cols="1"  fxHide.gt-xs="true">
+  <mat-grid-tile>
+<button mat-button style="width: 100%; height: 100%;  padding: 0px">
+      <mat-card style="width: 100%; height: 100%; padding: 0px">
 
 
-<mat-card>Simple card</mat-card>
+        <mat-card-content style="width: 100%; height: 100%;">
 
-<mat-card>Simple card</mat-card>
+          <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%">
+            <div>Home</div>
+          </div>
+
+
+        </mat-card-content>
+
+
+      </mat-card>
+ </button>
+  </mat-grid-tile>
+
+</mat-grid-list>
+
+
+<mat-grid-list cols="1" rowHeight="25rem" fxHide.xs="true">
+  <mat-grid-tile>
+
+      <mat-card style="width: 100%; height: 100%; padding: 0px; margin: 0px">
+        <button mat-button style="width: 100%; height: 100%; margin: 0px ">
+
+        <mat-card-content style="width: 100%; height: 100% ">
+
+          <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%">
+            <div>Home</div>
+          </div>
+
+
+        </mat-card-content>
+
+        </button>
+      </mat-card>
+
+  </mat-grid-tile>
+
+</mat-grid-list>
