--- a/shooter-app/src/styles.scss
+++ b/shooter-app/src/styles.scss
@@ -9,7 +9,7 @@ body {
   padding: 0;
   margin: 0%;
   //font-family: Roboto, sans-serif;
-    font-family: "Comic Sans MS", sans-serif;
+    font-family: "Oswald", sans-serif;
 
 
 }
