--- a/shooter-app/src/theme.scss
+++ b/shooter-app/src/theme.scss
@@ -11,8 +11,12 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$market-primary: mat-palette($mat-light-blue);
-$market-accent: mat-palette($mat-light-green);
+
+$custom-typography: mat-typography-config($font-family: '"Oswald", sans-serif;');
+@include mat-core($custom-typography);
+
+$market-primary: mat-palette($mat-blue);
+$market-accent: mat-palette($mat-amber);
 $market-warn: mat-palette($mat-red);
 
 $market-theme: mat-light-theme($market-primary, $market-accent, $market-warn);
