--- a/shooter-app/src/app/home/home.component.html
+++ b/shooter-app/src/app/home/home.component.html
@@ -14,6 +14,7 @@
           <!--31st 3:20-->
           <!--31st 3:20 Commit2-->
           <!--Feb 1st commit-->
+          <!--💎 🙌 🚀 $GME-->
         </mat-card-content>
 
 
