Feb Second: 💎 🙌 🚀 $GME

--- a/shooter-app/src/app/home/home.component.html
+++ b/shooter-app/src/app/home/home.component.html
@@ -15,7 +15,7 @@
           <!--31st 3:20 Commit2-->
           <!--Feb 1st commit-->
           <!--💎 🙌 🚀 $GME-->
-          <!--Feb Second 1st commit-->
+          <!--Feb Second: 💎 🙌 🚀 $GME-->
         </mat-card-content>
 
 
