old push needs to be added -new 404 page -new build

--- a/shooter-app/src/app/about/about.component.html
+++ b/shooter-app/src/app/about/about.component.html
@@ -1,21 +1,26 @@
 <mat-grid-list cols="1"  fxHide.gt-xs="true">
   <mat-grid-tile>
-<button mat-button style="width: 100%; height: 100%;  padding: 0px">
-      <mat-card style="width: 100%; height: 100%; padding: 0px">
 
+      <mat-card style="width: 100%; height: 100%;  ">
+        <!--<button mat-button style="width: 100%; height: 100%; margin: 0px ">-->
 
-        <mat-card-content style="width: 100%; height: 100%;">
+        <mat-card-content style="width: 100%; height: 100% ">
 
           <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%">
-            <div>About</div>
+            <div><h1>About the App</h1>
+              <h2>
+                This app uses GPS and Compass data to plot your location & orientation on a map.<br>
+                With a point and click you can register a hit on your target.
+              </h2>
+            </div>
           </div>
 
 
         </mat-card-content>
 
-
+        <!--</button>-->
       </mat-card>
- </button>
+
   </mat-grid-tile>
 
 </mat-grid-list>
@@ -24,19 +29,24 @@
 <mat-grid-list cols="1" rowHeight="25rem" fxHide.xs="true">
   <mat-grid-tile>
 
-      <mat-card style="width: 100%; height: 100%; padding: 0px; margin: 0px">
-        <button mat-button style="width: 100%; height: 100%; margin: 0px ">
+      <mat-card style="width: 100%; height: 100%;  ">
+        <!--<button mat-button style="width: 100%; height: 100%; margin: 0px ">-->
 
-        <mat-card-content style="width: 100%; height: 100% ">
+        <mat-card-content  style="width: 100%; height: 100% ">
 
           <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%">
-            <div>About</div>
+            <div><h1>About the App</h1>
+              <h2>
+                This app uses your phones GPS and Compass data to plot your location & orientation on a map.<br>
+                With a point and click you can register a hit on your target.
+              </h2>
+            </div>
           </div>
 
 
         </mat-card-content>
 
-        </button>
+        <!--</button>-->
       </mat-card>
 
   </mat-grid-tile>
