--- a/shooter-app/src/app/contact/contact.component.html
+++ b/shooter-app/src/app/contact/contact.component.html
@@ -7,7 +7,13 @@
         <mat-card-content style="width: 100%; height: 100% ">
 
           <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%">
-            <div>Contact</div>
+            <div><h1>Contact the Developer</h1>
+              <h2>
+                Creator/Developer:<a mat-button  target="_blank" href="https://serge.link">Serge Urakhchin</a><br>
+                email: urakhchin@gmail.com <br>
+                telegram: @LtSerge
+              </h2>
+            </div>
           </div>
 
 
@@ -30,7 +36,13 @@
         <mat-card-content style="width: 100%; height: 100% ">
 
           <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%">
-            <div>Contact</div>
+            <div><h1>Contact the Developer</h1>
+              <h2>
+                Creator/Developer:<a mat-button target="_blank" href="https://serge.link">Serge Urakhchin</a><br>
+                email: urakhchin@gmail.com <br>
+                telegram: @LtSerge
+              </h2>
+            </div>
           </div>
 
 
