--- a/shooter-app/src/app/nav/nav.component.html
+++ b/shooter-app/src/app/nav/nav.component.html
@@ -6,7 +6,7 @@
       </button>
     </div>
 
-    <a mat-button routerLink="/">
+    <a mat-button routerLink="">
       <span class="companyName">gpsshooter.com</span>
     </a>
 
@@ -25,8 +25,8 @@
 
     <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over" opened="false" fxHide.gt-sm="true">
       <div fxLayout="column">
-        <a mat-button routerLink="/about">About</a>
-        <a mat-button routerLink="/contact">Contact</a>
+        <a mat-button routerLink="about">About</a>
+        <a mat-button routerLink="contact">Contact</a>
       </div>
     </mat-sidenav>
     <mat-sidenav-content fxFlexFill>
@@ -37,64 +37,83 @@
       <!--MAIN CONTENT OF THE APPLICATION-->
       <div style="display: flex; flex-direction: column; justify-content: space-between; height: 93vh">
         <!--<div style=" ">-->
-          <div style="">
+
+
+
+        <div style="">
 
 
 
 
-<!--<mat-grid-list cols="2" style="border: 1px solid yellowgreen">-->
-  <!--<mat-grid-tile >-->
-    <!--<button mat-stroked-button color="accent" routerLink="/single-player" class="border-button" style="">Single-Player</button>-->
-  <!--</mat-grid-tile>-->
-  <!--<mat-grid-tile>-->
-    <!--<button mat-stroked-button color="accent" routerLink="/multi-player" style="  ">Multi-Player</button>-->
-  <!--</mat-grid-tile>-->
-<!--</mat-grid-list>-->
-
-<div fxFlex="50" style="">
-<button mat-raised-button color="primary" routerLink="/single-player" class="player-button">Single-Player</button>
-</div>
-<div fxFlex="50">
-<button mat-raised-button color="primary" routerLink="/multi-player" class="player-button">Multi-Player</button>
-</div>
-
-
+          <div fxFlex="50" style="">
+            <button mat-raised-button color="primary" routerLink="/single-player" class="player-button">Single-Player
+            </button>
           </div>
-        <!--</div>-->
-        <div >
+          <div fxFlex="50">
+            <button mat-raised-button color="primary" routerLink="/multi-player" class="player-button">Multi-Player
+            </button>
+          </div>
+
+
+        </div>
+
+
+
+
+
+
+        <div>
           <router-outlet></router-outlet>
         </div>
-        <div >
-          <!--<mat-card color="primary" style="width: 100%; height: 100%; padding: 0px; margin: 0px">-->
-            <!--&lt;!&ndash;<button mat-button style="width: 100%; height: 100%; margin: 0px; padding: 0px">&ndash;&gt;-->
-
-            <!--<mat-card-content style="width: 100%; height: 100%;">-->
-
-
-                <mat-toolbar color="primary" style="width: 100%; height: 100%; ">
-
-                  <div style="display: flex; width: 100%; justify-content: center">
-
-
-                <a mat-button routerLink="/about">About</a>
-                  <a mat-button routerLink="/home">© Copyright 2021</a>
-        <a mat-button routerLink="/contact">Contact</a>
-
-
-</div>
-                </mat-toolbar>
 
 
 
-            <!--</mat-card-content>-->
 
-            <!--&lt;!&ndash;</button>&ndash;&gt;-->
-          <!--</mat-card>-->
+        <br>
 
-        </div>
+        <!--<div>-->
+
+
+          <!--<mat-toolbar color="primary" style="width: 100%; height: 100%;  ">-->
+
+            <!--<div style="display: flex; width: 100%; justify-content: center">-->
+
+
+              <!--<a mat-button routerLink="/about">About</a>-->
+              <!--<a mat-button routerLink="/home">© Copyright 2021</a>-->
+              <!--<a mat-button routerLink="/contact">Contact</a>-->
+
+
+            <!--</div>-->
+          <!--</mat-toolbar>-->
+
+
+        <!--</div>-->
+
+
       </div>
 
 
+
+
+       <div>
+
+
+          <mat-toolbar color="primary" style="position: fixed; bottom: 0px ">
+
+            <div style="display: flex; width: 100%; justify-content: center">
+
+
+              <a mat-button routerLink="about">About</a>
+              <a mat-button routerLink="">© Copyright 2021</a>
+              <a mat-button routerLink="contact">Contact</a>
+
+
+            </div>
+          </mat-toolbar>
+
+
+        </div>
 
 
 
