--- a/shooter-app/src/theme.scss
+++ b/shooter-app/src/theme.scss
@@ -15,7 +15,7 @@
 $custom-typography: mat-typography-config($font-family: '"Oswald", sans-serif;');
 @include mat-core($custom-typography);
 
-$market-primary: mat-palette($mat-blue);
+$market-primary: mat-palette($mat-red);
 $market-accent: mat-palette($mat-amber);
 $market-warn: mat-palette($mat-red);
 
@@ -23,8 +23,8 @@ $market-theme: mat-light-theme($market-primary, $market-accent, $market-warn);
 @include angular-material-theme($market-theme);
 
 //for dark theme
-$market-primary-dark: mat-palette($mat-orange);
-$market-accent-dark: mat-palette($mat-yellow);
+$market-primary-dark: mat-palette($mat-red);
+$market-accent-dark: mat-palette($mat-grey);
 $market-warn-dark: mat-palette($mat-red);
 
 $market-theme-dark: mat-dark-theme($market-primary-dark, $market-accent-dark, $market-warn-dark);
